Fix bug in the way the small logo was set to visible or invisible in app.component.ts via a piped rxjs subscription. Use rxjs combineLatest with both streams instead.

--- a/src/assets/stylesheets/colors.scss
+++ b/src/assets/stylesheets/colors.scss
@@ -24,6 +24,8 @@ $attention: rgba(219, 196, 61, 1);
 $success: rgba(4, 167, 119, 1);
 $info: rgba(25, 130, 196, 1);
 
+// Black & White Range
 $white: rgba(240, 240, 240, 1);
+$light-gray: rgb(199, 199, 199);
 $mid-gray: rgba(89, 89, 89, 1);
-$dark-gray: rgba(40, 40, 40, 1);
+$dark-gray: rgb(51, 51, 51);
