--- a/src/assets/stylesheets/typography.scss
+++ b/src/assets/stylesheets/typography.scss
@@ -23,6 +23,7 @@ h1 {
   font-weight: 400;
   text-transform: uppercase;
   color: $brand;
+  // color: $light-gray;
   @media (min-width: 992px) {
     font-size: 4rem;
     line-height: 1.5;
@@ -34,7 +35,8 @@ h2 {
   line-height: 1.1;
   margin: 0 0 40px 0;
   font-weight: 500;
-  color: $accent;
+  // color: $accent;
+  color: $white;
   @media (min-width: 992px) {
     font-size: 2rem;
     line-height: 1.2;
@@ -47,6 +49,7 @@ h3 {
   line-height: 1.2;
   margin: 0 0 30px 0;
   font-weight: 300;
+  color: $mid-gray;
   @media (min-width: 992px) {
     font-size: 1.5rem;
     line-height: 1.2;
@@ -58,7 +61,8 @@ h4 {
   line-height: 1.2;
   margin: 0 0 30px 0;
   font-weight: 600;
-  color: $accent;
+  // color: $accent;
+  color: $mid-gray;
   @media (min-width: 992px) {
     font-size: 1.7rem;
     line-height: 1.2;
