--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@
 
 body {
   min-height: 100vh;
-  background: $subtle-one;
+  background: $subtle-two;
   // background: linear-gradient(180deg, $subtle-one 0%, $subtle-two 100%);
   // background: $dark-gray;
   // background-color: rgba(39,45, 55, 1);
